--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact List</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="frontend/style/style.css">
 </head>
 <body>
     <div class="main">
@@ -28,17 +28,7 @@
             <div class="edit">
                 <a href="#">Edit</a>
             </div>
-
         </div>
-       <!-- <div class="contact-img">
-            img
-            <img src="#" alt="">
-        </div>
-        <div class="form">
-            <form action="">
-                Name
-            </form>
-        </div>-->
     </div>
 </body>
 </html>
